# lc-agent-bfzs

./: .gitignore  AGENTS.md  README.md  bfzs_checkpoints.db-shm  bfzs_data.db  bfzs_data.db-shm  bfzs_data.db-wal  bfzs_memory.db  config.jsonc  inspect_db.py  lc_agent_bfzs_all_docs_and_codes.md  lc_agent_memory.db  nb_log_config.py  permissions.jsonc  pyproject.toml
bfzs/: __init__.py  init_loggers.py  main.py  start_desktop.py
bfzs/agents/: __init__.py  research_agent.py
bfzs/tools/: __init__.py  data_tools.py  file_tools.py
myskills/____anysearch/: .env.example  LICENSE  NOTICE  README.md  TEST_PLAN.md
myskills/____anysearch/scripts/: anysearch_cli.js  anysearch_cli.py
myskills/____anysearch/scripts/shared/: doc_spec.md
myskills/anysearch/: SKILL.md  requirements.txt
myskills/anysearch/.github/workflows/: ci.yml
myskills/anysearch/scripts/: anysearch_cli.ps1  anysearch_cli.sh  generate.py
myskills/code-review/: SKILL.md
myskills/doc-summarize/: SKILL.md
myskills/langchain-query/: SKILL.md  write_skill.py
myskills/nbrag-workflow/: SKILL.md
myskills/web-search/: SKILL.md
pythonlogs/: 2026-06-18.0001.lc-agent.print  2026-06-18.0001.lc-agent.std
